# learn-ai

./: .gitignore  .mcp.json
Architectural_Design_Agent/: .env.example  .gitignore  CLAUDE.md  README.md  auto_design.py  config.py  pyproject.toml  run_web.py
Architectural_Design_Agent/core/: ai_backend.py  architecture_generator.py  architecture_validator.py  claude_cli.py  openai_api.py  prd_loader.py
Architectural_Design_Agent/examples/: prd.json
Architectural_Design_Agent/prompts/: architecture-design.md  validation-review.md
Architectural_Design_Agent/utils/: file_utils.py  logger.py  subprocess.py
Architectural_Design_Agent/web/: __init__.py  app.py  task_manager.py
Architectural_Design_Agent/web/static/: script.js  style.css
Architectural_Design_Agent/web/templates/: index.html.jinja
Code_Agent_CLI/: .env.example  CLAUDE.md  README.md  main.py  pyproject.toml
Code_Agent_CLI/claude-tool-agent-example/: README.md  main.py  requirements.txt
Code_Agent_CLI/claude-tool-agent-example/agent/: tool_executor.py  tool_registry.py  tool_registry_initializer.py
Code_Agent_CLI/claude-tool-agent-example/tools/: base.py  calculator.py  weather.py
Code_Agent_CLI/src/: main.py
Code_Agent_CLI/src/agent/: __init__.py  core.py
Code_Agent_CLI/src/context/: __init__.py  base.py  manager.py  token_counter.py  tool_buffer.py  working.py
Code_Agent_CLI/src/llm/: base.py  claude_provider.py  factory.py  ollama_provider.py  openai_provider.py
Code_Agent_CLI/src/prompts/: system.md
Code_Agent_CLI/src/tools/: __init__.py  base.py  bash.py  grep.py  list_dir.py  loader.py  read.py  registry.py  write.py
Code_Agent_CLI/src/utils/: command_handler.py  console.py
Code_Agent_CLI/test/: README.md  __init__.py  test_context_phase1.py
Code_Auto_Generation_Agent/: .env.example  .gitignore  README.md  auto_coding.py  config.py  main.py  pyproject.toml
Code_Auto_Generation_Agent/bak/: .env.example  README.md  auto_coding.py  config.py  pyproject.toml
Code_Auto_Generation_Agent/bak/core/: ai_backend.py  architecture_loader.py  claude_cli.py  generator.py  git_manager.py  openai_api.py  quality_checker.py  scaffold_generator.py  story_manager.py  template_manager.py  toolcall_agent.py
Code_Auto_Generation_Agent/bak/examples/: todo-system.architecture.json  todo-system.prd.json
Code_Auto_Generation_Agent/bak/prompts/: __init__.py  fix-errors.md  get-build-commands.md  implement-story.md  review-implementation.md
Code_Auto_Generation_Agent/bak/utils/: file_utils.py  subprocess.py
Code_Auto_Generation_Agent/core/: __init__.py  ai_backend.py  base_agent.py  claude_cli.py  codegen_agent.py  config.py  coordinator.py  fix_agent.py  generator.py  git_manager.py  manifest.py  openai_api.py  planning_agent.py  prd_loader.py  progress_tracker.py  quality_checker.py  quality_fix_orchestrator.py  snapshot_manager.py  story_manager.py  utils.py
Code_Auto_Generation_Agent/core/agents/: __init__.py  base_agent.py  codegen_agent.py  fix_agent.py  planning_agent.py
Code_Auto_Generation_Agent/core/agents.old/: base_agent.py  codegen_agent.py  fix_agent.py  planning_agent.py
Code_Auto_Generation_Agent/core/utils/: __init__.py  common.py  logging_config.py  shell.py
Code_Auto_Generation_Agent/examples/: prd.json  test-simple-todo.json
Code_Auto_Generation_Agent/prompts/: __init__.py  codegen_agent.md  codegen_task.md  fix-errors.md  fix_agent.md  fix_quality_check.md  get-build-commands.md  implement-story.md  plan_module_tasks.md  plan_stage1_extract_modules.md  plan_stage2_module_tasks.md  plan_stage3_resolve_deps.md  plan_tasks.md  planning_agent.md  quality_checker.md  review-implementation.md
Code_Auto_Generation_Agent/tests/: test_base_agent.py  test_codegen_agent.py  test_config.py  test_coordinator.py  test_fix_agent.py  test_manifest.py  test_planning_agent.py  test_quality_checker.py  test_quality_fix_orchestrator.py  test_snapshot_manager.py  test_utils_common.py  test_utils_shell.py
Code_Auto_Generation_Agent/utils/: file_utils.py  logger.py  subprocess.py
Requirements_Analysis_Agent/: .env.example  .gitignore  CLAUDE.md  README.md  autoprd.py  pyproject.toml
Requirements_Analysis_Agent/output/: .gitkeep
Requirements_Analysis_Agent/prompts/: autoprd-analysis.md  autoprd-conversion.md  autoprd-integration.md  autoprd-system.md
Requirements_Analysis_Agent/web/: __init__.py  app.py  task_manager.py
agent-write-file-test/: README.md  agent_write_file.py  code_analysis_result.json  index.html  main.py  pyproject.toml
ccs/: .coverage  README.md  extract_images.py  extract_images2.py  extract_text.py  pyproject.toml
ccs/backend/: README.md  main.py  pyproject.toml
ccs/backend/app/: __init__.py  (+4 more)
ccs/ccs-mcp/: README.md  pyproject.toml  server.py
ccs/ccs_mcp/: README.md  pyproject.toml  server.py
ccs/docs/: database_schema.md
ccs/extracted_images/: 【CCS】画面定義書_受付売上票一覧表_1.0_001.emf
ccs/extracted_text/: 【CCS】画面定義書_受付売上票一覧表_1.0_text.md  【CCS】画面定義書_売上票受付入力画面 (手入力・大量)_1.0_text.md  【CCS】画面定義書_売上票受付入力画面（通常・INFOX）_1.0_text.md  【CCS】画面定義書_小箱状況一覧_1.0_text.md  【CCS】画面定義書_郵便受付画面_1.0_text.md
ccs/frontend/: .gitignore  README.md  jest.config.js  next.config.ts  package-lock.json  package.json
ccs/scripts/: create_database.py  drop_tables.py
ccs/sql/: 01_create_tables.sql
ccs/设计书/: README.md  【CCS】画面定義書_受付売上票一覧表_1.0.xlsx  【CCS】画面定義書_売上票受付入力画面 (手入力・大量)_1.0.xlsx  【CCS】画面定義書_売上票受付入力画面（通常・INFOX）_1.0.xlsx  【CCS】画面定義書_小箱状況一覧_1.0.xlsx  【CCS】画面定義書_郵便受付画面_1.0.xlsx
software-engineering-agent-pipeline/: .coverage  .env.example  .gitignore  .htmlhintrc  .prettierrc  CLAUDE.md  MEMORY.md  README.md  plan.md  pyproject.toml  requirements_graph.mmd
software-engineering-agent-pipeline/.claude/: settings.local.json
software-engineering-agent-pipeline/examples/: interactive_requirements_analysis.py  requirements_demo.py  visualize_graph.py  web_server.py
software-engineering-agent-pipeline/memory/: clarification_rule.md  git_push_rule.md
software-engineering-agent-pipeline/memory-mcp/: .gitignore  http-server.js  start-http.bat  start-http.sh  tsconfig.json
(+322 files in other folders)
