[project]
name = "auto-coding-agent"
version = "0.1.0"
description = "Automatic Code Generation Agent - generate full project from PRD json using AI"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0.0",
  "fastapi>=0.124.4",
  "uvicorn>=0.33.0",
  "python-multipart>=0.0.20",
  "jinja2>=3.1.0",
  "pydantic>=2.0.0",
  "openai>=1.0.0",
]

[project.scripts]
auto-coding = "auto_coding:main"

[tool.ruff]
line-length = 100
select = ["E", "W", "F", "I"]
ignore = ["E501"]
