[project]
name = "code-auto-generation-agent"
version = "0.1.0"
description = "AI-powered code generation agent with ReAct pattern"
requires-python = ">=3.10"
dependencies = [
    "langgraph >= 0.2",
    "langchain-openai >= 0.1",
    "langchain-core >= 0.2",
    "openai >= 1.0",
    "pydantic >= 2.0",
    "pydantic-settings >= 2.0",
    "python-dotenv >= 1.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
