[project]
name = "code-auto-generation-agent"
version = "0.1.0"
description = "AI-powered code generation agent with ReAct pattern"
requires-python = ">=3.10"
dependencies = [
    "langgraph >= 0.2",
    "langchain-openai >= 0.1",
    "langchain-core >= 0.2",
    "openai >= 1.0",
    "pydantic >= 2.0",
    "pydantic-settings >= 2.0",
    "python-dotenv >= 1.0",
    "mypy>=1.20.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "silent"
strict_optional = true
warn_return_any = false
warn_unused_configs = true
disable_error_code = ["attr-defined", "arg-type", "assignment", "call-arg", "return-value", "union-attr", "truthy-function", "operator", "var-annotated", "name-defined", "str-bytes-safe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"


[[tool.mypy.overrides]]
module = "langchain.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "langchain_core.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "langchain_openai.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pydantic.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pydantic_settings.*"
ignore_errors = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
]
