[project]
name = "agent-write-file-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[tool.ruff]
target-version = "py313"

# 行宽限制 (默认 88，与 Black 一致)
line-length = 88

# 排除目录
exclude = [
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

# 启用的规则集
# F: Pyflakes (基础错误)
# E: pycodestyle (风格错误)
# W: pycodestyle (风格警告)
# I: isort (导入排序)
# UP: pyupgrade (自动升级语法)
# B: flake8-bugbear (常见 bug)
select = [
    "E", "W",    # 风格
    "F",         # 错误
    "I",         # 导入排序
    "UP",        # 语法升级
    "B",         # 常见 bug
    "C90",       # 复杂度
]

# 忽略的规则 (例如：忽略行过长警告 E501，因为 Ruff formatter 会自动处理换行)
ignore = ["E501"]

# 自动修复配置
[tool.ruff.format]
quote-style = "double" # 使用双引号
indent-style = "space" # 使用空格缩进

