[project]
name = "se-pipeline"
version = "0.1.0"
description = "Software Engineering Multi-Agent Pipeline - 软件工程多Agent流水线系统"
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.0",
  "pydantic>=2.0.0",
  "langchain-openai>=0.2.0",
  "langchain-core>=0.3.0",
  "openai>=1.0.0",
  "mcp>=1.0.0",
  "python-dotenv>=1.0.0",
  "aiohttp>=3.13.5",
  "pyyaml>=6.0.3",
  "pypdf>=4.0.0",
  "PyMuPDF>=1.24.0",
  "pillow>=10.0.0",
  "openpyxl>=3.1.5",
  "pandas>=3.0.2",
  "fastapi>=0.100.0",
  "uvicorn>=0.24.0",
  "python-multipart>=0.0.6",
  "sse-starlette>=1.6.1",
  "markdown>=3.6",
  "jinja2>=3.1.0",
  "tabulate>=0.10.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages.find = {where = ["src"]}

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "black>=24.0.0",
  "ruff>=0.5.0",
  "pytest-cov>=7.1.0",
  "python-dotenv>=1.2.2",
  "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
markers = [
  "integration: Mark integration tests that require LLM API access",
]
