[project]
name = "ccs-mcp"
version = "0.2.0"
description = "MCP Server for CCS project - read design documents and execute database operations"
authors = []
dependencies = [
    "mcp[cli]>=1.0.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "psycopg2-binary>=2.9.0",
]
requires-python = ">=3.10"
